Character skin change button alignment fixed

--- a/imports/client/ui/blocks/Person/Image/PersonImage.styl
+++ b/imports/client/ui/blocks/Person/Image/PersonImage.styl
@@ -67,6 +67,7 @@ $presonImage_dim = round(percentage($personImage_y / $personImage_x), 2)
     height 65px
     align-content center
     justify-content center
+    align-items center
 
     border none
     border-radius 50%
@@ -89,10 +90,8 @@ $presonImage_dim = round(percentage($personImage_y / $personImage_x), 2)
       height 56px
       border-radius 50%
       background-color $cw--color_black
-    
-    .cw--PersonImage__icon
-      z-index 2
 
   &__icon
+    z-index 2
     width 50px
     height 50px
